--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,9 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      spree/line_item:
+        giftwrap: Gift Wrap
+  spree:
+    giftwrap: Gift Wrap
+    giftwrap_adjustment: "Gift Wrap x %{count} (%{name})"
+    giftwrap_cost: Gift Wrap Charge
